refactor: update unit tests